// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ViewReducer should handle clearing state with defined types: defined type SET_QUERY_CLEAR 1`] = `
{
  "result": {
    "graphTallyQuery": {},
    "inventoryGuestsQuery": {
      "test_id": {
        "offset": 5,
      },
    },
    "inventoryHostsQuery": {
      "test_id": {
        "dir": "dolor desc direction",
        "offset": 30,
        "sort": "dolor sort",
      },
    },
    "inventorySubscriptionsQuery": {
      "test_id": {
        "dir": "ipsum desc direction",
        "offset": 20,
        "sort": "ipsum sort",
      },
    },
    "query": {
      "test_id": {
        "dolor": undefined,
      },
    },
  },
  "type": "SET_QUERY_CLEAR",
}
`;

exports[`ViewReducer should handle clearing state with defined types: defined type SET_QUERY_CLEAR_INVENTORY_GUESTS_LIST 1`] = `
{
  "result": {
    "graphTallyQuery": {},
    "inventoryGuestsQuery": {
      "test_id": {
        "offset": 0,
      },
    },
    "inventoryHostsQuery": {
      "test_id": {
        "dir": "dolor desc direction",
        "offset": 30,
        "sort": "dolor sort",
      },
    },
    "inventorySubscriptionsQuery": {
      "test_id": {
        "dir": "ipsum desc direction",
        "offset": 20,
        "sort": "ipsum sort",
      },
    },
    "query": {
      "test_id": {
        "dolor": "sit",
      },
    },
  },
  "type": "SET_QUERY_CLEAR_INVENTORY_GUESTS_LIST",
}
`;

exports[`ViewReducer should handle clearing state with defined types: defined type SET_QUERY_CLEAR_INVENTORY_LIST 1`] = `
{
  "result": {
    "graphTallyQuery": {},
    "inventoryGuestsQuery": {
      "test_id": {
        "offset": 5,
      },
    },
    "inventoryHostsQuery": {
      "test_id": {
        "dir": "dolor desc direction",
        "offset": 0,
        "sort": "dolor sort",
      },
    },
    "inventorySubscriptionsQuery": {
      "test_id": {
        "dir": "ipsum desc direction",
        "offset": 0,
        "sort": "ipsum sort",
      },
    },
    "query": {
      "test_id": {
        "dolor": "sit",
      },
    },
  },
  "type": "SET_QUERY_CLEAR_INVENTORY_LIST",
}
`;

exports[`ViewReducer should handle clearing state with defined types: defined type SET_QUERY_RESET_INVENTORY_LIST 1`] = `
{
  "result": {
    "graphTallyQuery": {},
    "inventoryGuestsQuery": {
      "test_id": {
        "offset": 5,
      },
    },
    "inventoryHostsQuery": {
      "test_id": {
        "offset": 0,
      },
    },
    "inventorySubscriptionsQuery": {
      "test_id": {
        "offset": 0,
      },
    },
    "query": {
      "test_id": {
        "dolor": "sit",
      },
    },
  },
  "type": "SET_QUERY_RESET_INVENTORY_LIST",
}
`;

exports[`ViewReducer should handle specific defined types: defined type SET_PRODUCT 1`] = `
{
  "result": {
    "graphTallyQuery": {},
    "inventoryGuestsQuery": {},
    "inventoryHostsQuery": {},
    "inventorySubscriptionsQuery": {},
    "product": {
      "config": "lorem ipsum product",
    },
    "productConfig": {},
    "query": {},
  },
  "type": "SET_PRODUCT",
}
`;

exports[`ViewReducer should handle specific defined types: defined type SET_PRODUCT_VARIANT 1`] = `
{
  "result": {
    "graphTallyQuery": {},
    "inventoryGuestsQuery": {},
    "inventoryHostsQuery": {},
    "inventorySubscriptionsQuery": {},
    "product": {
      "variant": {
        "test_id": "lorem variant",
      },
    },
    "productConfig": {},
    "query": {},
  },
  "type": "SET_PRODUCT_VARIANT",
}
`;

exports[`ViewReducer should handle specific defined types: defined type SET_PRODUCT_VARIANT_QUERY_RESET_ALL 1`] = `
{
  "result": {
    "graphTallyQuery": {},
    "inventoryGuestsQuery": {},
    "inventoryHostsQuery": {},
    "inventorySubscriptionsQuery": {},
    "product": {},
    "productConfig": {},
    "query": {},
  },
  "type": "SET_PRODUCT_VARIANT_QUERY_RESET_ALL",
}
`;

exports[`ViewReducer should handle specific defined types: defined type SET_QUERY 1`] = `
{
  "result": {
    "graphTallyQuery": {},
    "inventoryGuestsQuery": {},
    "inventoryHostsQuery": {},
    "inventorySubscriptionsQuery": {},
    "product": {},
    "productConfig": {},
    "query": {
      "test_id": {
        "dolorFilter": "sit any value",
      },
    },
  },
  "type": "SET_QUERY",
}
`;

exports[`ViewReducer should handle specific defined types: defined type SET_QUERY_GRAPH 1`] = `
{
  "result": {
    "graphTallyQuery": {
      "test_id": {
        "dolorFilter": "sit any value",
      },
    },
    "inventoryGuestsQuery": {},
    "inventoryHostsQuery": {},
    "inventorySubscriptionsQuery": {},
    "product": {},
    "productConfig": {},
    "query": {},
  },
  "type": "SET_QUERY_GRAPH",
}
`;

exports[`ViewReducer should handle specific defined types: defined type SET_QUERY_INVENTORY_GUESTS 1`] = `
{
  "result": {
    "graphTallyQuery": {},
    "inventoryGuestsQuery": {
      "test_id": {
        "dolorFilter": "sit any value",
      },
    },
    "inventoryHostsQuery": {},
    "inventorySubscriptionsQuery": {},
    "product": {},
    "productConfig": {},
    "query": {},
  },
  "type": "SET_QUERY_INVENTORY_GUESTS",
}
`;

exports[`ViewReducer should handle specific defined types: defined type SET_QUERY_INVENTORY_INSTANCES 1`] = `
{
  "result": {
    "graphTallyQuery": {},
    "inventoryGuestsQuery": {},
    "inventoryHostsQuery": {
      "test_id": {
        "dolorFilter": "sit any value",
      },
    },
    "inventorySubscriptionsQuery": {},
    "product": {},
    "productConfig": {},
    "query": {},
  },
  "type": "SET_QUERY_INVENTORY_INSTANCES",
}
`;

exports[`ViewReducer should handle specific defined types: defined type SET_QUERY_INVENTORY_SUBSCRIPTIONS 1`] = `
{
  "result": {
    "graphTallyQuery": {},
    "inventoryGuestsQuery": {},
    "inventoryHostsQuery": {},
    "inventorySubscriptionsQuery": {
      "test_id": {
        "dolorFilter": "sit any value",
      },
    },
    "product": {},
    "productConfig": {},
    "query": {},
  },
  "type": "SET_QUERY_INVENTORY_SUBSCRIPTIONS",
}
`;
